# notepad-server

./: .env  Cargo.toml
examples/: auth_test.rs
migrations/: 0001_create_users.sql  0002_create_blacklisted_tokens.sql  0003_create_notes.sql
src/: lib.rs  main.rs
src/api/: auth.rs  mod.rs  sync.rs
src/auth/: error.rs  middleware.rs  model.rs  service.rs
src/database/: auth_db.rs  mod.rs  sync_db.rs
src/middleware/: auth.rs  logging.rs  mod.rs
src/sync/: error.rs  mod.rs  model.rs  service.rs
src/utils/: logging.rs
